# smcm-cern-demo

./: .gitignore  README.md  deploy.sh  docker-compose.yml  smoke_test.sh
backend/: entrypoint.sh  requirements.txt
backend/api/: tests.py  views.py
backend/config/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
lhc-sensor-simulator/: CMakeLists.txt  Dockerfile  main.cpp
nginx/: default.conf
telemetry-service/: Dockerfile  pom.xml
telemetry-service/src/main/java/io/github/Stiofain_MacMathuna/telemetry_service/: LhcEvent.java  TelemeryServiceApplication.java  TelemetryController.java  TelemetryExceptionHandler.java  TelemetryServiceApplication.java
telemetry-service/src/main/java/io/github/Stiofain_MacMathuna/telemetry_service/model/: TelemetryEvent.java
telemetry-service/src/main/java/io/github/Stiofain_MacMathuna/telemetry_service/repository/: TelemetryRepository.java
telemetry-service/src/main/resources/: application.properties
telemetry-service/src/test/java/io/github/Stiofain_MacMathuna/telemetry_service/: TelemeryServiceApplicationTests.java
